<resources>
    <string name="app_name">MyMovieCatalogue(Final)</string>
    <!-- Strings used for fragments for navigation -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_detail_movies">DetailMoviesActivity</string>
    <string name="title_activity_detail_tv_show">DetailTvShowActivity</string>
    <string name="title_holder">Title:</string>
    <string name="title">Judul</string>
    <string name="director_holder">Director:</string>
    <string name="director">Director</string>
    <string name="genre_holder">Genre:</string>
    <string name="genre">Genre</string>
    <string name="overview_holder">Overview</string>
    <string name="overview">Overview</string>
    <string name="year_holder">Year:</string>
    <string name="year">Year</string>
    <string name="creator">Creator</string>
    <string name="movies">Movies</string>
    <string name="tv_show">TV Shows</string>
    <string name="title_movies">Movies</string>
    <string name="title_tvshow">Tv Show</string>
    <string name="title_fav">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">My Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorites">My Favorites</string>
    <string name="spalsh_screen">splash screen</string>
</resources>